--- a/login.html
+++ b/login.html
@@ -2,6 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
+    <meta name="google-signin-client_id" content="676416527258-61om5nlj7brpvd563v0hcs5vbqcnd3k8.apps.googleusercontent.com.apps.googleusercontent.com">
 		<title>Advanced Trivia Login</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
