--- a/login.html
+++ b/login.html
@@ -18,7 +18,8 @@
 	</head>
   <body>
 
-    <div class="g-signin2" data-onsuccess="onSignIn"></div>
+    <div class="my-signin2" data-onsuccess="onSignIn"></div>
+    <a href="#" onclick="signOut();">Sign out</a>
 
   <script type="text/javascript" src="assets/javascript/app.js"></script>
   <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
