--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
 	</head>
   <body>
 
-    <div class="my-signin2" data-onsuccess="onSignIn"></div>
+    <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <!-- <a href="#" onclick="signOut();">Sign out</a> -->
 
   <script type="text/javascript" src="assets/javascript/app.js"></script>
