--- a/login.html
+++ b/login.html
@@ -21,8 +21,8 @@
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
     <a href="#" onclick="signOut();">Sign out</a>
 
-    <!-- <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script> -->
-    <script src="https://apis.google.com/js/platform.js" async defer></script>
+    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
+    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
     <script type="text/javascript" src="assets/javascript/app.js"></script>
   </body>
   </html>
