--- a/login.html
+++ b/login.html
@@ -19,13 +19,14 @@
   <body>
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
-    <a href="#" onclick="signOut();">Sign out</a>
+    <a href="#" onclick="signOut();">Sign out of Google</a>
 
     <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
     </fb:login-button>
 
     <div id="status">
     </div>
+    <a href="#" onclick="FB.logout();">Sign out of Facebook</a>
 
 
 
