--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
 
     <div id="status">
     </div>
-    <a href="#" onclick="FB.logout();">Sign out of Facebook</a>
+    <a href="#" onclick="signOutFB();">Sign out of Facebook</a>
 
 
 
