editing facebook login

--- a/login.html
+++ b/login.html
@@ -27,12 +27,4 @@
 		<a href="#" onclick="signOut();">Sign out of Google</a>
 
 
-
-
-
-
-    <script src="https://apis.google.com/js/platform.js?onload=renderButton" async defer></script>
-    <!-- <script src="https://apis.google.com/js/platform.js" async defer></script> -->
-    <script type="text/javascript" src="assets/javascript/app.js"></script>
-  </body>
-  </html>
+		<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="false"></div>
