editing facebook login

--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+		<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
     </fb:login-button>
     <div id="status"></div>
 
