editing facebook login

--- a/login.html
+++ b/login.html
@@ -20,8 +20,8 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-		<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();"> -->
-    </fb:login-button>
+		<!-- <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+    </fb:login-button> -->
     <div id="status"></div>
 
 		<a href="#" onclick="signOut();">Sign out of Google</a>
