--- a/login.html
+++ b/login.html
@@ -20,9 +20,8 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-		<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="true"></div>
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
-    </fb:login-button>
+		<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="true" scope="public_profile,email" onlogin="checkLoginState();"></div>
+
     <div id="status"></div>
 
 		<a href="#" onclick="signOut();">Sign out of Google</a>
