--- a/login.html
+++ b/login.html
@@ -17,21 +17,11 @@
 		<link rel="stylesheet" type="text/css" href="assets/css/advancedStyle.css">
 	</head>
   <body>
-		<script>
-		// Load the SDK asynchronously
-    (function(d, s, id) {
-      var js, fjs = d.getElementsByTagName(s)[0];
-      if (d.getElementById(id)) return;
-      js = d.createElement(s); js.id = id;
-      js.src = "//connect.facebook.net/en_US/sdk.js";
-      fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));
-		</script>
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-		<div class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="true" scope="public_profile,email" onlogin="checkLoginState();"></div>
-
+		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="true">
+    </fb:login-button>
     <div id="status"></div>
 
-		<a href="#" onclick="signOut();">Sign out of Google</a>
+		<a href="login.html" onclick="signOut();">Sign out of Google</a>
