--- a/login.html
+++ b/login.html
@@ -20,8 +20,13 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="fb-login-button" data-max-rows="1" data-size="icon" data-show-faces="false" data-auto-logout-link="true">
     </fb:login-button>
     <div id="status"></div>
 
 		<a href="login.html" onclick="signOut();">Sign out of Google</a>
+
+
+
+</body>
+</html>
