--- a/login.html
+++ b/login.html
@@ -20,7 +20,7 @@
 
     <div class="g-signin2" data-onsuccess="onSignIn"></div>
 
-		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="fb-login-button" data-max-rows="1" data-size="xlarge" data-show-faces="false" data-auto-logout-link="true">
+		<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true">
     </fb:login-button>
     <div id="status"></div>
 
