--- a/login.html
+++ b/login.html
@@ -3,7 +3,13 @@
 	<head>
 		<meta charset="utf-8">
     <meta name="google-signin-client_id" content="676416527258-kgb1jjtep2o1k90lvmi2v8pg3g0pau6d.apps.googleusercontent.com">
-		<title>Advanced Trivia Login</title>
+		<!-- Facebook Meta Tags -->
+		<meta property="og:url"                content="https://damp-inlet-31239.herokuapp.com/login.html" />
+		<meta property="og:type" content="trivia game" />
+		<meta property="og:title" content="Georgia Tech Football Trivia"/>
+		<meta property="og:description" content="Test your knowledge of old and recent Yellow Jacket facts!" />
+		<meta property="og:image" content="../images/bobbydodd.jpg" />
+		<title>Georgia Tech Football Trivia Login</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- Optional theme -->
@@ -33,7 +39,7 @@
 
 				<div class="fb-share-button" data-href="https://damp-inlet-31239.herokuapp.com" data-layout="button" data-size="large" data-mobile-iframe="true"><a class="fb-xfbml-parse-ignore" target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdamp-inlet-31239.herokuapp.com%2F&amp;src=sdkpreparse">Share</a></div>
 			</div>
-		</div>	
+		</div>
 
 		<!-- Google Login -->
 		<script src="https://apis.google.com/js/platform.js" async defer></script>
