adding FB meta tags

--- a/login.html
+++ b/login.html
@@ -5,10 +5,10 @@
     <meta name="google-signin-client_id" content="676416527258-kgb1jjtep2o1k90lvmi2v8pg3g0pau6d.apps.googleusercontent.com">
 		<!-- Facebook Meta Tags -->
 		<meta property="og:url"                content="https://damp-inlet-31239.herokuapp.com/login.html" />
-		<meta property="og:type" content="trivia game" />
+		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Georgia Tech Football Trivia"/>
 		<meta property="og:description" content="Test your knowledge of old and recent Yellow Jacket facts!" />
-		<meta property="og:image" content="../images/bobbydodd.jpg" />
+		<meta property="og:image" content=../images/bobbydodd.jpg/>
 		<title>Georgia Tech Football Trivia Login</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
