--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:title" content="Georgia Tech Football Trivia"/>
 		<meta property="og:description" content="Test your knowledge of old and recent Yellow Jacket facts!" />
-		<meta property="og:image" content=images/bobbydodd.jpg/>
+		<meta property="og:image" content="https://gtswarm.com/photos/20141018/georgia_tech_at_unc_0018.jpg"/>
 		<title>Georgia Tech Football Trivia Login</title>
 		<!-- Latest compiled and minified CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
