testing sign in with link

--- a/login.html
+++ b/login.html
@@ -30,7 +30,7 @@
 			</div>
 			<div class="container">
 		    <div class="g-signin2" data-onsuccess="onSignIn"></div>
-				<a href="" onclick="onSignIn();">Sign In to Google</a>
+				<a href="#" onclick="onSignIn();">Sign In to Google</a>
 
 				<fb:login-button scope="public_profile,email" onlogin="checkLoginState();" class="fb-login-button" data-max-rows="1" data-size="large" data-show-faces="false" data-auto-logout-link="true">
 		    </fb:login-button>
